2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* branched: now begins 2.3.x development

	* gmime-2.4.pc.in: Renamed from gmime-2.0.pc.in.

	* gmime-config.in: Removed.

	* gmimeConf.sh.in: Removed.

	* configure.in: Updated.

	* */Makefile.am: Rename lib name to gmime-2.4.

2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* mono/StreamWrapper.cs: Allow seeking to position 0 for
	GMimeStreamFilter. Thanks to Debajyoti Bera for this patch.

2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.21

	* gmime/gmime-parser.c: Check parser_step() against
	GMIME_PARSER_STATE_ERROR rather than -1 in case the value ever
	changes.
	(struct _GMimeParserPrivate): Changed state to be 16bit int
	instead of a 26bit int which apparently cannot be set to -1 on
	Solaris. Fixes bug #534301.
	(parser_step_headers): Fixed a corner-case where a read boundary
	fell between the \n and \t of a folded header.

2008-05-16  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.20

2008-05-15  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-buffer.c (stream_read): Break if
	g_mime_stream_read() returns 0 as well (meaning EOF, no more data
	to read) and don't keep looping. Fixes bug #533331.

2008-05-03  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.19

2008-05-02  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (parser_step_headers): Fix for CRLF encoded
	input.

2008-04-05  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (header_parse): Fixed a memory leak in the
	case of an invalid header.

2008-02-16  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.18

2008-03-13  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (parser_construct_message): Changed
	content_length to an unsigned long rather than unsigned int, fixes